--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,6 +6,7 @@ on:
       - main
   release:
     types: [created]
+  workflow_dispatch:
 
 jobs:
   build:
@@ -24,22 +25,16 @@ jobs:
       run: |
         cd demo_src/TCP_Client/MobileIMSDK4aDemo_tcp
         ./gradlew build
-      env:
-        JAVA_HOME: ${{ steps.setup-java.outputs.java-home }}
 
     - name: Build Java Client
       run: |
         cd demo_src/TCP_Client/MobileIMSDK4jDemo_tcp
         ./gradlew build
-      env:
-        JAVA_HOME: ${{ steps.setup-java.outputs.java-home }}
 
     - name: Build iOS Client
       run: |
         cd demo_src/TCP_Client/MobileIMSDK4iDemo_tcp
         xcodebuild -scheme MobileIMSDK4iDemo_tcp -sdk iphoneos
-      env:
-        JAVA_HOME: ${{ steps.setup-java.outputs.java-home }}
 
     - name: Upload Release Assets
       uses: actions/upload-artifact@v3
@@ -63,8 +58,6 @@ jobs:
 
     - name: Create GitHub Release
       uses: actions/create-release@v3
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name: ${{ github.ref_name }}
         release_name: Release ${{ github.ref_name }}
@@ -73,4 +66,4 @@ jobs:
         draft: false
         prerelease: false
         files: |
-          release-assets/**/*.*
+          release-assets/**/*
