--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,6 @@
 name: Build and Release Clients
 
 on:
-  # 1. 手动触发
   workflow_dispatch:
     inputs:
       client:
@@ -20,11 +19,10 @@ on:
         default: 'v1.0.0'
         type: string
 
-  # 2. 当推送到某分支时触发（仅对 .github/workflows 和 demo_src/TCP_Client 修改时运行）
   push:
     paths:
       - '.github/workflows/**'
-      - 'demo_src/TCP_Client/**' # 监控工作目录下的文件更改
+      - 'demo_src/TCP_Client/**'
 
 jobs:
   build:
@@ -68,16 +66,18 @@ jobs:
         if: matrix.client == 'ios'
         run: sudo xcode-select -s /Applications/Xcode.app
 
-      # Step 5: 构建客户端
+      # Step 5: 构建客户端（确保权限）
       - name: Build client
         run: |
           cd ${{ matrix.path }}
           if [ "${{ matrix.client }}" == "android" ]; then
+            chmod +x gradlew # 确保 gradlew 可执行
             ./gradlew clean assembleRelease
           elif [ "${{ matrix.client }}" == "java" ]; then
             mkdir -p out
             javac -d out src/**/*.java
           elif [ "${{ matrix.client }}" == "ios" ]; then
+            chmod +x *.sh # 如果有 Shell 脚本，确保可执行
             xcodebuild -scheme MobileIMSDK4iDemo_tcp -configuration Release
           fi
 
